# aws-lambda-builders

./: .appveyor.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yaml  .travis.yml  CONTRIBUTING.md  DESIGN.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  pyproject.toml  pytest.ini  setup.py
tests/integration/workflows/python_pip/testdata-issue-246/: setup.cfg
tests/integration/workflows/python_pip/testdata/local-dependencies/: requirements.txt  setup.cfg
tests/integration/workflows/python_pip/testdata/local-dependencies/hello_world/: requirements.txt
tests/integration/workflows/python_pip/testdata/local-dependencies/some_package/: setup.py
tests/integration/workflows/python_pip/testdata/local-dependencies/src/local_package/: entrypoint.py
tests/integration/workflows/rust_cargo/testdata/: Cargo.toml
tests/integration/workflows/rust_cargo/testdata/fail/: Cargo.toml
tests/integration/workflows/rust_cargo/testdata/fail/src/: main.rs
tests/integration/workflows/rust_cargo/testdata/hello/: Cargo.toml
tests/integration/workflows/rust_cargo/testdata/hello/src/: main.rs
tests/integration/workflows/rust_cargo/testdata/multi-binary/src/: function_b.rs
tests/integration/workflows/rust_cargo/testdata/src/: main.rs
tests/integration/workflows/rust_cargo/testdata/workspaces/bar/: Cargo.toml
tests/integration/workflows/rust_cargo/testdata/workspaces/bar/src/: main.rs
tests/integration/workflows/rust_cargo/testdata/workspaces/foo/: Cargo.toml
tests/integration/workflows/rust_cargo/testdata/workspaces/foo/src/: main.rs
(+460 files in other folders)
