[metadata]
name = issue-246-code
description = "Use src/ setup of a python project to demonstrate aws/aws-lambda-builders#246"
version = 0.0.0

[options]
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    requests==2.23.0
include_package_data = True

[options.packages.find]
where = src
